--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/profile.php?id=61550531150311"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/alby-shelly-b79b5b289?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B8T5VmwO7Tz2lmvfTd%2FHcQw%3D%3D"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/AlbyShelly"><i class="fab fa-fw fa-dribbble"></i></a>
