git card and its modal added in the skill section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto text-center" data-bs-toggle="modal" data-bs-target="#portfolioModal6">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -118,6 +118,18 @@
                             <img class="img-fluid" style="width: 15rem;height: 15rem ;" src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="..." />
                         </div>
                     </div>
+                    <!-- Portfolio Item 7 -->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto text-center" data-bs-toggle="modal" data-bs-target="#portfolioModal7">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid " style="width: 15rem;height: 15rem ;" src="https://git-scm.com/images/logos/downloads/Git-Icon-Black.png" alt="..." />
+                        </div>
+                    </div>
+
+                    
+
                 </div>
             </div>
         </section>
@@ -436,6 +448,39 @@
                                     <img class="img-fluid rounded mb-5" src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">CSS (Cascading Style Sheets) is a stylesheet language used to define the visual appearance and layout of web documents. Introduced in the late 1990s, CSS empowers web designers to apply styles (like colors, fonts, and spacings) to HTML content, ensuring web pages are both responsive and aesthetically pleasing across devices. With its ability to separate content from presentation, CSS has become an indispensable tool in modern web design."</p>
+                                    <button class="btn btn-primary" data-bs-dismiss="modal">
+                                        <i class="fas fa-xmark fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Portfolio Modal 7-->
+        <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" aria-labelledby="portfolioModal7" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
+                    <div class="modal-body text-center pb-5">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">GIT</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="https://git-scm.com/images/logos/downloads/Git-Icon-Black.png" alt="..." />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-4">Git:Git is a opensource version control system. I have am familiar with basic git commands like checkout, log, branch, merge(fast forward & recurrsive), github integrations like remote add, push, pull, clone and basic git workflows like forking workflow.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
